--- a/index.css
+++ b/index.css
@@ -131,12 +131,12 @@ nav .navigation ul li a:hover{
     background-color: #fff;
     font-weight: 600;
     border-radius: 5px;
-    margin-left: 20px;/*modified here   */
 }
 #home div.btn a.blue{
     color: #fff;
     background: rgb(21, 21, 100);
     transition: 0.3s ease;
+    margin-left: 5px;
 }
 #home div.btn a.blue:hover{
     color: rgb(21, 21, 100);
@@ -146,6 +146,7 @@ nav .navigation ul li a:hover{
     color: #fff;
     background: #FDC93B;
     transition: 0.3s ease;
+    margin-left: 5px;
 }
 #home div.btn a.yellow:hover{
     color: #FDC93B;
@@ -567,9 +568,5 @@ nav .navigation ul li a:hover{
         align-items: center;
     }
 
-    #home .btn{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
+  
 }
