--- a/index.css
+++ b/index.css
@@ -123,6 +123,9 @@ nav .navigation ul li a:hover{
 }
 #home .btn{
     margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em
 }
 #home a{
     text-decoration: none;
@@ -131,12 +134,13 @@ nav .navigation ul li a:hover{
     background-color: #fff;
     font-weight: 600;
     border-radius: 5px;
+    text-align: center;
 }
 #home div.btn a.blue{
     color: #fff;
     background: rgb(21, 21, 100);
     transition: 0.3s ease;
-    margin-left: 5px;
+    display: inline-block;
 }
 #home div.btn a.blue:hover{
     color: rgb(21, 21, 100);
@@ -146,7 +150,7 @@ nav .navigation ul li a:hover{
     color: #fff;
     background: #FDC93B;
     transition: 0.3s ease;
-    margin-left: 5px;
+    display: inline-block;
 }
 #home div.btn a.yellow:hover{
     color: #FDC93B;
