--- a/nav4.css
+++ b/nav4.css
@@ -1,6 +1,9 @@
 *{
     box-sizing: border-box;
 }
+::-webkit-scrollbar {width: 0px}
+::-webkit-scrollbar-track {background: #444}
+::-webkit-scrollbar-thumb{background: #222}
 html{
     --dark-blue: rgb(21, 21, 100);
     --light-blue: #b9b9c9;
@@ -66,3 +69,9 @@ nav ul li ul.menu a:hover{
     color: var(--color-text);
 }
 
+.menu {
+    display: none;
+}
+.menu.show {
+    display: block;
+}
